--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/BlogPost/BlogPostsByCategory.cshtml
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/BlogPost/BlogPostsByCategory.cshtml
@@ -1,5 +1,5 @@
 ﻿@using PagedList.Mvc;
-@model PagedList.IPagedList<GamingGuruBlog.Data.Models.BlogPost>
+@model PagedList.IPagedList<GamingGuruBlog.Domain.Models.BlogPost>
 
 @{
     ViewBag.Title = "BlogPostsByCategory";
