persited Domain layer to Views dependant on models. Create category now redirects action to Adminpanel Admin

--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/Category/AddCategory.cshtml
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/Category/AddCategory.cshtml
@@ -1,4 +1,4 @@
-﻿@model GamingGuruBlog.Data.Models.Category
+﻿@model GamingGuruBlog.Domain.Models.Category
 
 @{
     ViewBag.Title = "AddCategory";
