--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/Shared/_BlogWidgetPartial.cshtml
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/Shared/_BlogWidgetPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@using GamingGuruBlog.Data.Models;
+﻿@using GamingGuruBlog.Domain.Models;
 @model GamingGuruBlog.Web.Models.AllBlogPostsVM
 
 <link href="~/Content/BlogWidget.css" rel="stylesheet" />
