--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/Shared/_StaticPagePartial.cshtml
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/Shared/_StaticPagePartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<GamingGuruBlog.Data.Models.StaticPage>
+﻿@model List<GamingGuruBlog.Domain.Models.StaticPage>
 
 @foreach (var page in Model)
 {
