--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/StaticPage/AddStaticPage.cshtml
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/StaticPage/AddStaticPage.cshtml
@@ -1,4 +1,4 @@
-﻿@model GamingGuruBlog.Data.Models.StaticPage
+﻿@model GamingGuruBlog.Domain.Models.StaticPage
 
 @{
     ViewBag.Title = "AddStaticPage";
