--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/Welcome/Welcome.cshtml
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/Welcome/Welcome.cshtml
@@ -18,7 +18,7 @@
                 <div class="col-md-12">
                     <div class="text-center">
                         <h1 style="color:white">Welcome to Gaming Guru</h1>
-                        <p style="color:white"> Your number one source for all video game news! Updated every 15 minutes with new reviews, demos and articles</p>
+                        @*<p style="color:white"> Your number one source for all video game news! Updated every 15 minutes with new reviews, demos and articles</p>*@
                         @Html.ActionLink("Enter Blog","Index","Home",null, new {@class = "btn btn-primary btn-xl"})
                     </div>
                 </div>
