added some jQuery to keep tab selection in Admin Panel view

--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/Admin/AdminPanel.cshtml
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/Admin/AdminPanel.cshtml
@@ -9,7 +9,7 @@
 <h2>Admin Panel</h2>
 
 <hr />
-<ul class="nav nav-tabs" role="tablist">
+<ul class="nav nav-tabs" role="tablist" id="myTab">
     <li class="active">
         <a href="#userTab" role="tab" data-toggle="tab">Users</a>
     </li>
@@ -173,6 +173,7 @@
 {
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Scripts/app/jquery.selectedTab.js"></script>
 }
 
 
