--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/Admin/AdminPanel.cshtml
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/Admin/AdminPanel.cshtml
@@ -36,6 +36,7 @@
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Email</th>
+                    <th>User Role</th>
                     <th></th>
                 </tr>
             </thead>
@@ -46,6 +47,7 @@
                         <td>@user.FirstName</td>
                         <td>@user.LastName</td>
                         <td>@user.Email</td>
+                        <td>@Html.DropDownListFor(x => x.Users, Model.UserRoles)</td>
                         <td></td>
                     </tr>
                 }
