--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/BlogPost/Post.cshtml
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/BlogPost/Post.cshtml
@@ -53,7 +53,7 @@
     </div>
 </div>
 
-@section scripts
+@section Scripts
     {
         <script src="~/Scripts/jquery.validate.min.js"></script>
         <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
