--- a/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/Shared/_Layout.cshtml
+++ b/Blog/GamingGuruBlog.Web/GamingGuruBlog.Web/Views/Shared/_Layout.cshtml
@@ -62,16 +62,16 @@
     </div>
 
     @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    @RenderSection("Scripts", required: false)
 
 </body>
 </html>
-<script src="~/Scripts/cheet.min.js"></script>
-<script src="~/Scripts/jquery-1.4.1.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
+@*<script src="~/Scripts/cheet.min.js"></script>*@
+@*<script src="~/Scripts/jquery-1.4.1.min.js"></script>*@
+@*<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>*@
 <script>!window.jQuery && document.write('<script src="jquery-1.4.3.min.js"><\/script>')</script>
-<script src="~/Scripts/jquery.raptorize.1.0.js"></script>
-<script src="~/Scripts/EasterEgg/jquery.toasty.js"></script>
+@*<script src="~/Scripts/jquery.raptorize.1.0.js"></script>
+<script src="~/Scripts/EasterEgg/jquery.toasty.js"></script>*@
 <script src="~/Scripts/app/tagcanvas.min.js"></script>
 <script src="~/Scripts/app/jquery.tagcanvas.min.js"></script>
 
